[gd_scene load_steps=11 format=2]

[ext_resource path="res://Src/ArmorBar.gd" type="Script" id=1]
[ext_resource path="res://Src/HealthBar.gd" type="Script" id=2]
[ext_resource path="res://Scenes/ArmorBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/HUD.gd" type="Script" id=5]
[ext_resource path="res://Scenes/ContainerItems.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.380392, 0.870588, 0.364706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.239216, 0.509804, 0.254902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0862745, 0.772549, 0.862745, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0666667, 0.427451, 0.537255, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="HUD" type="Control"]
rect_scale = Vector2( 4.31439, 4.31439 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = 3.60456
margin_top = 5.89085
margin_right = 153.605
margin_bottom = 25.8908
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
script = ExtResource( 2 )

[node name="ArmorBar" parent="." instance=ExtResource( 3 )]
margin_left = 2.88955
margin_top = 30.9464
margin_right = 152.89
margin_bottom = 50.9464
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
script = ExtResource( 1 )

[node name="TimerItem" parent="." instance=ExtResource( 6 )]
margin_left = 15.2835
margin_top = 61.093
margin_right = 135.284
margin_bottom = 106.093
